Chapter 20: Policy and Governance for Kubernetes Clusters/allowedrepos-constraint-dryrun.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: repo-is-kuar-demo
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  namespaces:
    - "default"
  parameters:
    repos:
      - "gcr.io/kuar-demo/"
